BORIS hyphenation fix

--- a/power/src/locales/messages.en.xlf
+++ b/power/src/locales/messages.en.xlf
@@ -519,7 +519,7 @@
     </unit>
     <unit id="5763537713323428568">
       <notes>
-        <note category="location">src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html:11</note>
+        <note category="location">src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.ts:11</note>
       </notes>
       <segment state="final">
         <source>Art der Nutzung</source>
@@ -528,7 +528,7 @@
     </unit>
     <unit id="4858894794380558995">
       <notes>
-        <note category="location">src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html:17</note>
+        <note category="location">src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.ts:12</note>
       </notes>
       <segment state="final">
         <source>Bodenrichtwert</source>
@@ -537,7 +537,7 @@
     </unit>
     <unit id="5682599121859154301">
       <notes>
-        <note category="location">src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html:23</note>
+        <note category="location">src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.ts:13</note>
       </notes>
       <segment state="final">
         <source>Beitragsabgabenrechtlicher Zustand</source>
